# feishu_group_todo

./: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  README.zh-CN.md  config.py  docker-compose.yml  main.py  pyproject.toml
graphs/: message_graph.py  onboard_graph.py  scheduler_graph.py
nodes/: bitable_nodes.py  command_nodes.py  feishu_nodes.py  llm_nodes.py  report_nodes.py
prompts/: analyzer.py  intent.py  report.py
schemas/: models.py  state.py
tests/: conftest.py  test_bitable_client.py  test_feishu_client.py  test_message_graph.py  test_onboard_graph.py  test_scheduler_graph.py
tests/fixtures/: mock_events.json  mock_messages.json  mock_todos.json
tools/: bitable_client.py  feishu_client.py  llm_client.py  storage_interface.py
